--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ResolveForeignCustomAssertion.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ResolveForeignCustomAssertion.form
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.l7tech.console.panels.ResolveForeignCustomAssertionPanel">
-  <grid id="ad04f" binding="mainPanel" row-count="2" column-count="1" hgap="-1" vgap="-1">
+  <grid id="ad04f" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="19" y="24" width="645" height="485"/>
-      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3"/>
+      <xy x="19" y="24" width="711" height="392"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="432e9" row-count="1" column-count="2" hgap="-1" vgap="-1">
+      <grid id="432e9" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <xy x="0" y="0" width="645" height="226"/>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="etched" title="Missing Custom Assertion Type Details"/>
         <children>
           <component id="381d5" class="javax.swing.JLabel">
             <constraints>
-              <xy x="6" y="113" width="133" height="15"/>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Custom Assertion Type"/>
@@ -29,8 +26,7 @@
           </component>
           <component id="c8535" class="javax.swing.JTextField" binding="assNameTxtField">
             <constraints>
-              <xy x="149" y="109" width="490" height="22"/>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1">
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
@@ -40,19 +36,17 @@
           </component>
         </children>
       </grid>
-      <grid id="ca77c" row-count="2" column-count="1" hgap="-1" vgap="-1">
+      <grid id="ca77c" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <xy x="0" y="231" width="645" height="254"/>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="etched" title="Action"/>
         <children>
           <component id="bc19" class="javax.swing.JRadioButton" binding="removeRadio">
             <constraints>
-              <xy x="6" y="65" width="277" height="23"/>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Remove custom assertions of unknown type"/>
@@ -60,8 +54,7 @@
           </component>
           <component id="8029a" class="javax.swing.JRadioButton" binding="ignoreRadio">
             <constraints>
-              <xy x="6" y="181" width="220" height="23"/>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Import erroneous assertions as-is"/>
@@ -69,6 +62,11 @@
           </component>
         </children>
       </grid>
+      <vspacer id="d3d62">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
     </children>
   </grid>
 </form>
