--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ResolveIdProvider.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ResolveIdProvider.form
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.l7tech.console.panels.ResolveForeignIdentityProviderPanel">
-  <grid id="7f63c" binding="mainPanel" row-count="3" column-count="1" hgap="-1" vgap="-1">
+  <grid id="7f63c" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="46" y="49" width="630" height="338"/>
-      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3"/>
+      <xy x="46" y="49" width="969" height="435"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="bd6d2" row-count="3" column-count="2" hgap="-1" vgap="-1">
+      <grid id="bd6d2" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="5" left="5" bottom="5" right="5"/>
         <constraints>
-          <xy x="10" y="35" width="610" height="141"/>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="etched" title="Missing Identity Provider Details"/>
         <children>
           <component id="74071" class="javax.swing.JLabel">
             <constraints>
-              <xy x="11" y="29" width="34" height="15"/>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Name"/>
@@ -29,8 +26,7 @@
           </component>
           <component id="bbd2f" class="javax.swing.JLabel">
             <constraints>
-              <xy x="11" y="56" width="29" height="15"/>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Type"/>
@@ -38,8 +34,7 @@
           </component>
           <component id="8524e" class="javax.swing.JTextField" binding="foreignProviderName">
             <constraints>
-              <xy x="55" y="26" width="544" height="22"/>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1">
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
@@ -50,8 +45,7 @@
           </component>
           <component id="acaf3" class="javax.swing.JTextField" binding="foreignProviderType">
             <constraints>
-              <xy x="55" y="53" width="544" height="22"/>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1">
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
@@ -62,8 +56,7 @@
           </component>
           <scrollpane id="294ae">
             <constraints>
-              <xy x="11" y="80" width="588" height="50"/>
-              <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3"/>
+              <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -79,19 +72,17 @@
           </scrollpane>
         </children>
       </grid>
-      <grid id="3a05e" row-count="4" column-count="2" hgap="-1" vgap="-1">
+      <grid id="3a05e" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="5" left="5" bottom="5" right="5"/>
         <constraints>
-          <xy x="10" y="181" width="610" height="147"/>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="etched" title="Action"/>
         <children>
           <component id="90712" class="javax.swing.JRadioButton" binding="manualResolvRadio">
             <constraints>
-              <xy x="11" y="26" width="296" height="23"/>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Change assertions to use this identity provider:"/>
@@ -99,8 +90,7 @@
           </component>
           <component id="6a9d9" class="javax.swing.JRadioButton" binding="removeRadio">
             <constraints>
-              <xy x="11" y="55" width="374" height="23"/>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <label value="Remove assertions that refer to the missing identity provider"/>
@@ -109,8 +99,7 @@
           </component>
           <component id="71d2c" class="javax.swing.JRadioButton" binding="ignoreRadio">
             <constraints>
-              <xy x="11" y="83" width="220" height="23"/>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <focusPainted value="false"/>
@@ -121,8 +110,7 @@
           </component>
           <component id="130bf" class="javax.swing.JComboBox" binding="providerSelector">
             <constraints>
-              <xy x="481" y="26" width="118" height="24"/>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <toolTipText value="Existing local identity provider"/>
@@ -130,8 +118,7 @@
           </component>
           <component id="1268b" class="javax.swing.JButton" binding="createProviderButton">
             <constraints>
-              <xy x="11" y="111" width="197" height="25"/>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="8" fill="0"/>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Create new Identity Provider"/>
@@ -142,8 +129,7 @@
       </grid>
       <component id="92f49" class="javax.swing.JLabel">
         <constraints>
-          <xy x="10" y="10" width="394" height="20"/>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="0" anchor="8" fill="2"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Policy contains assertions that refer to an unknown identity provider."/>
