--- a/modules/gateway/console/src/main/java/com/l7tech/console/poleditor/SearchForm.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/poleditor/SearchForm.form
@@ -49,12 +49,13 @@
       </hspacer>
       <hspacer id="3e886">
         <constraints>
-          <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="1" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
       <component id="9a28b" class="com.l7tech.console.panels.EditableSearchComboBox" binding="searchComboBox" custom-create="true">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="400" height="-1"/>
             <preferred-size width="500" height="-1"/>
           </grid>
         </constraints>
