--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/PrivateKeyPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/PrivateKeyPropertiesDialog.form
@@ -135,7 +135,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="5" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="View Certificate"/>
+                  <text value="&amp;View Certificate"/>
                 </properties>
               </component>
             </children>
@@ -164,7 +164,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Replace Certificate Chain"/>
+              <text value="Replace Certificate C&amp;hain"/>
             </properties>
           </component>
           <component id="e8d1b" class="javax.swing.JButton" binding="generateCSRButton" default-binding="true">
@@ -172,7 +172,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Generate CSR"/>
+              <text value="Generate CS&amp;R"/>
             </properties>
           </component>
           <component id="9d49" class="javax.swing.JButton" binding="makeDefaultCAButton" default-binding="true">
@@ -180,7 +180,7 @@
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Make Default CA"/>
+              <text value="Make Default C&amp;A"/>
             </properties>
           </component>
           <component id="cf181" class="javax.swing.JButton" binding="makeDefaultSSLButton" default-binding="true">
@@ -188,7 +188,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Make Default SSL"/>
+              <text value="Make Default &amp;SSL"/>
             </properties>
           </component>
           <component id="55b5b" class="javax.swing.JButton" binding="destroyPrivateKeyButton" default-binding="true">
@@ -198,7 +198,7 @@
             <properties>
               <defaultCapable value="false"/>
               <font/>
-              <text value="Destroy Key"/>
+              <text value="&amp;Delete Key"/>
             </properties>
           </component>
           <component id="b39b6" class="javax.swing.JButton" binding="exportKeyButton" default-binding="true">
@@ -206,7 +206,7 @@
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Export Key"/>
+              <text value="E&amp;xport Key"/>
             </properties>
           </component>
         </children>
@@ -224,11 +224,14 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="6" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Close"/>
+              <text value="&amp;Close"/>
             </properties>
           </component>
         </children>
       </grid>
     </children>
   </grid>
+  <inspectionSuppressions>
+    <suppress inspection="NoLabelFor" id="45cd8"/>
+  </inspectionSuppressions>
 </form>
